5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1593_2425.log
== TEST (2019-03-21 18:25:55) 
-- CODE:



gasto = 4

print(round(gasto,3),km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(gasto,3),km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:15) 
-- CODE:



gasto = 4

print(round(gasto,3),"km/l")
-- OUTPUT:
4 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:22) 
-- CODE:
distancia = float(input("distancia percorrida"))
consumo = float(input("consumo de gasolina"))

gasto = distancia / consumo

print(round(gasto,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:28:46) 
-- CODE:
distancia = float(input("distancia percorrida"))
consumo = float(input("consumo de gasolina"))

gasto = distancia / consumo

print(round(gasto,3),"km/l")
-- EXECUTION TIME:
0.131437
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
